--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flat_icons_flutter: ^1.0.2
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
