--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: dro_ecommerce_store
-description: A new Flutter project.
+name: dro_health_pharmacy
+description: A User Inface for DRO Health Pharmacy
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,9 +27,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flat_icons_flutter: ^1.0.2
+  cupertino_icons: ^1.0.0
   provider: ^4.3.2+3
+  flat_icons_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -62,17 +62,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: ProximaNova
+      fonts:
+        - asset: fonts/ProximaNova-Regular.ttf
+        - asset: fonts/ProximaNova-RegularIt.ttf
+        - asset: fonts/ProximaNova-Semibold.ttf
+        - asset: fonts/ProximaNova-SemiboldIt.ttf
+        - asset: fonts/ProximaNova-BoldIt.ttf
+        - asset: fonts/ProximaNova-Bold.ttf
+        - asset: fonts/ProximaNova-ExtrabldIt.ttf
+        - asset: fonts/ProximaNova-Extrabld.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
